# hiring-engine

./: .gitignore  README.md  export_full_templates.py  export_templates_summary.py  main.py  precompute.py  pyproject.toml  rank.py  requirements.txt  run_stage0.py  sample_candidates.jsonl  submission_metadata_template.yaml  team_InferenceEngine.csv  tree_output.txt
artifacts/: candidate_ids.npy  embeddings.npy  full_templates_report.txt  jd_embedding.npy  jd_query_tokens.pkl  templates_summary.txt
artifacts/bm25_index/: data.csc.index.npy  indices.csc.index.npy  indptr.csc.index.npy  params.index.json  vocab.index.json
candidate_analysis/: analyze_candidates.py
sample_artifacts/: candidate_ids.npy  embeddings.npy  jd_query_tokens.pkl  skill_duration_percentiles.pkl
sample_artifacts/bm25_index/: data.csc.index.npy  indices.csc.index.npy  indptr.csc.index.npy  params.index.json  vocab.index.json
sample_artifacts/reranker_optimum/: config.json  tokenizer_config.json
scripts/: analyze_jd_templates.py  build_template_summaries.py  compute_skill_duration_percentiles.py  export_onnx.py
src/: candidate_doc.py  filters.py  reasoning.py  reranker.py  retrieval.py  signals.py
