[project]
name = "redrob-ranker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bm25s==0.1.5",
    "einops>=0.8.2",
    "faiss-cpu==1.8.0",
    "numpy==1.26.4",
    "onnx==1.16.1",
    "onnxruntime==1.17.1",
    "pandas==2.2.0",
    "scipy==1.12.0",
    "sentence-transformers>=2.4.0",
    "torch==2.2.1",
    "tqdm==4.66.1",
    "transformers==4.38.2",
]

[tool.uv.sources]
